--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
                 <div class="col-md-4">
                     <p>Paypal Donation <strong>androdevlinux@web.de</strong>
                     </p>
-                    <p>Email: <strong>prxothehacker@gmail.com</strong>
+                    <p>Email: <strong>proxthehacker@gmail.com</strong>
                     </p>
                     <p>Address: <strong>India</strong>
                     </p>
